--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
         <p>If you have any questions or need further information, feel free to reach out to me. I am here to help and support you!</p>
         
         <div class="about-images">
-            <img src="Contact Me.jpg" alt="Contact Image" class="float-left">
+            <img src=Contact Me.jpg alt="Contact Image" class="float-left">
             <p>You can contact me via email at <a href="mailto:tiffany.pace@wayne.kyschools.us">tiffany.pace@wayne.kyschools.us</a>. I strive to respond to all emails within 24 hours during the weekdays.</p>
         </div>
         
