--- a/index.html
+++ b/index.html
@@ -78,17 +78,17 @@
         <p>Hello, and welcome to 4th grade! I am Ms. Tiffany and I am so excited to have you in class this year! This is my fourth year teaching fourth grade. I graduated from the University of the Cumberlands in 2020 with my Bachelor's in Elementary Education and am currently pursuing my Master's in Library Science at Eastern Kentucky University.</p>
 
         <div class="homepage-images">
-            <img src="C:\Users\tiffa\OneDrive\Documents\LIB841PersonalProject\welcome.jpg" alt="Welcome Image">
+            <img src=welcome.jpg alt="Welcome Image">
         </div>
 
         <h2>New Arrivals</h2>
         <div class="homepage-images">
-            <img src="C:\Users\tiffa\OneDrive\Documents\LIB841PersonalProject\New arrivals.jpg" alt="New Arrivals">
+            <img src=New arrivals.jpg alt="New Arrivals">
         </div>
 
         <h2>Classroom Activities</h2>
         <div class="homepage-images">
-            <img src="C:\Users\tiffa\OneDrive\Documents\LIB841PersonalProject\classroom activities.jpg" alt="Classroom Activities">
+            <img src=classroom activities.jpg alt="Classroom Activities">
         </div>
 
         <h2>Upcoming Events</h2>
