--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
         <h2>Classroom Activities</h2>
         <div class="homepage-images">
-            <img src=classroom activities.jpg alt="Classroom Activities">
+            <img src="classroom activities.jpg" alt="Classroom Activities">
         </div>
 
         <h2>Upcoming Events</h2>
