--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <h2>New Arrivals</h2>
         <div class="homepage-images">
-            <img src=New arrivals.jpg alt="New Arrivals">
+            <img src="New arrivals.jpg" alt="New Arrivals">
         </div>
 
         <h2>Classroom Activities</h2>
